Archive2/20/443fcf63d605e9/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp:1:2: error: invalid preprocessing directive #!
 #!/bin/bash -x
  ^
main.cpp:3:1: error: 'git' does not name a type
 git init .
 ^
