Archive2/20/443fcf63d605e9/main.cpp
#!/bin/bash -x

git init .
git fast-import

git log --graph --all --decorate --left-right